# RAG-LangChain

./: .gitignore  README.md  index.html  main.py  pyproject.toml  script.js  style.css
.github/workflows/: python-RAG.yml
RAG/: app.py
RAG/.github/workflows/: python-RAG.yml
RAG/services/: llm_service.py  rag_service.py
RAG/vector_db/faiss_index/: index.faiss  index.pkl
tests/: test_rag.py
vector_db/faiss_index/: index.faiss  index.pkl
